--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
-
+    environment: ricofilm  # Spécifiez l'environnement ici
     steps:
     - uses: actions/checkout@v3
 
@@ -33,6 +33,7 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
+    environment: ricofilm  # Spécifiez l'environnement ici
     needs: test
 
     steps:
@@ -49,6 +50,7 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
+    environment: ricofilm  # Spécifiez l'environnement ici
     needs: build
     
     steps:
